2002-05-03  Morten Welinder  <terra@diku.dk>

	* src/rangefunc.c (range_count): New function.
	* src/func-util.h: Remove.

2002-05-02  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/print-info.c (print_info_free) : add print-config
	(print_info_new) : ditto
	(print_info_save) : ditto
	(print_info_dup) : ditto
	* src/print-info.h : add print-config to PrintInformation
	* src/print.c (print_job_info_get) : use
	  gnome_print_master_get_page_size_from_config
	(sheet_print) : use print_config included in PrintInformation
	* src/xml-io.c (xml_write_print_info) : use print_config included 
	  in PrintInformation
	(xml_read_print_info) : ditto

2002-05-02  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=79925
	* src/sheet-control-gui.c (scg_colrow_select) : flag failures to
	  initiate a selection
	* src/item-bar.c (item_bar_event) : only grab if the selection is
	  successful.

2002-05-02  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/print.c (sheet_print) : pass updated print-config to print-dialog
	
2002-05-01  Christophe Merlet  <christophe@merlet.net>

	* schemas/gnumeri-dialogs.schemas : Replaced // with /.
	* src/Makefile.am : Added main-application.c to $EXTRA_DIST.

2002-04-30  Jody Goldberg <jody@gnome.org>

	* src/dependent.c (cb_range_contained_collect) : begin support for
	  GnmRenderedRegion by adding support for non relocatable dependents.
	(cb_single_contained_collect) : ditto.

2002-04-29  Jody Goldberg <jody@gnome.org>

	* src/gnumeric-pane.c (gnumeric_pane_header_init) : set a
	  non-contraining scrollregion here in case something scrolls before we
	  are realized and a real region is assigned.

	* src/sheet-object.c (sheet_object_clone_sheet) : range == NULL is legal

	* src/sheet.c (sheet_clone_colrow_info_item) : Use colrow_copy.
	  While we're here use sheet_colrow_fetch too.
	(sheet_dup) : rename from sheet_duplicate to be consistent.

2002-04-29  Jody Goldberg <jody@gnome.org>
