@@ -1,5 +1,12 @@
 2002-05-03  Andreas J. Guelzow <aguelzow@taliesin.ca>
 
+	* dialog-cell-sort.c : replace MAX_INITIAL_CLAUSES with 
+	  gnm_gconf_get_sort_max_initial_clauses ()
+	* dialog-preferences.c : remove file history length from tree page,
+	  add sort_max_initial_clauses to sort page
+
+2002-05-03  Andreas J. Guelzow <aguelzow@taliesin.ca>
+
 	* dialog-printer-setup.c (unit_activated) : correct declaration
 	(unit_deactivated) : ditto
 
